--- a/package.json
+++ b/package.json
@@ -26,11 +26,14 @@
     "@nestjs/platform-express": "^7.6.15",
     "@nestjs/swagger": "^4.8.0",
     "@nestjs/typeorm": "^7.1.5",
+    "@types/moment": "^2.13.0",
     "axios": "^0.21.1",
     "class-transformer": "^0.4.0",
     "class-validator": "^0.13.1",
     "dotenv": "^8.2.0",
     "js-yaml": "^4.1.0",
+    "moment": "^2.29.1",
+    "moment-timezone": "^0.5.34",
     "multer": "^1.4.2",
     "nodemon": "^2.0.7",
     "pg": "^8.6.0",
@@ -49,6 +52,7 @@
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.11",
     "@types/jest": "^26.0.22",
+    "@types/moment-timezone": "^0.5.30",
     "@types/multer": "^1.4.5",
     "@types/node": "^14.14.41",
     "@types/nodemon": "^1.19.0",
