--- a/package.json
+++ b/package.json
@@ -7,13 +7,15 @@
   "license": "MIT",
   "scripts": {
     "prebuild": "rimraf dist",
+    "prettier": "prettier --write \"{,!(node_modules|dist|build|bin|libs|coverage)/**/}*.{js,jsx,ts,tsx,json}\"",
     "build": "cpy '**/*.json' '.env' 'assets/*' --parents --cwd=src ../dist && nest build && node scripts/build.js",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "cpy '**/*.json' '.env' 'assets/*' --parents --cwd=src ../dist && nest start",
     "start:dev": "cpy '**/*.json' '.env' 'assets/*' --parents --cwd=src ../dist && nest start --watch",
     "start:debug": "cpy '**/*.json' '.env' 'assets/*' --parents --cwd=src ../dist && nest start --debug --watch",
     "start:prod": "node dist/main",
-    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
+    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\"",
+    "lint:fix": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
